--- a/ckanext/odm_laws/i18n/th.po
+++ b/ckanext/odm_laws/i18n/th.po
@@ -1,14 +1,13 @@
-#
+# 
 # Translators:
 # Misharim <misharim@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: ODM ckanext-odm_laws\n"
 "POT-Creation-Date: 2016-05-16 12:34+0200\n"
-"PO-Revision-Date: 2016-05-16 12:36+0200\n"
+"PO-Revision-Date: 2016-05-17 11:50+0000\n"
 "Last-Translator: Alex Corbi <a.corbi@gmail.com>\n"
-"Language-Team: Thai (http://www.transifex.com/open-development-mekong/odm-"
-"ckanext-odm_laws/language/th/)\n"
+"Language-Team: Thai (http://www.transifex.com/open-development-mekong/odm-ckanext-odm_laws/language/th/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,8 +15,8 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Poedit 1.8.4\n"
 "X-Poedit-Basepath: ../../../ckanext\n"
-"X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: odm_laws/lib/odm_laws_helper.py:27
 msgid ""
@@ -37,8 +36,8 @@ msgstr ""
 #: odm_laws/lib/odm_laws_helper.py:29
 msgid ""
 "Please take this opportunity to review your library record. If you would "
-"like to make any changes please select your library record and then click "
-"on the Manage button on the top right corner."
+"like to make any changes please select your library record and then click on"
+" the Manage button on the top right corner."
 msgstr ""
 
 #: odm_laws/lib/odm_laws_helper.py:30
@@ -93,9 +92,9 @@ msgstr ""
 
 #: odm_laws/lib/odm_laws_helper.py:40
 msgid ""
-"License (Make sure you indicated the correct license. Additional "
-"information on creative commons is found here http://opendefinition.org/"
-"licenses/. If there is no license, please indicate 'license unspecified')"
+"License (Make sure you indicated the correct license. Additional information"
+" on creative commons is found here http://opendefinition.org/licenses/. If "
+"there is no license, please indicate 'license unspecified')"
 msgstr ""
 
 #: odm_laws/lib/odm_laws_helper.py:41
@@ -120,7 +119,7 @@ msgstr ""
 
 #: odm_laws/lib/odm_laws_helper.py:46
 msgid "Publisher"
-msgstr ""
+msgstr "ผู้พิมพ์"
 
 #: odm_laws/lib/odm_laws_helper.py:47
 msgid ""
@@ -140,11 +139,11 @@ msgstr ""
 
 #: odm_laws/lib/odm_laws_helper.py:50
 msgid "Publication Date"
-msgstr ""
+msgstr "วันที่พิมพ์"
 
 #: odm_laws/lib/odm_laws_helper.py:51
 msgid "Pagination"
-msgstr ""
+msgstr "การให้เลขหน้า"
 
 #: odm_laws/lib/odm_laws_helper.py:52
 msgid ""
