--- a/ckanext/odm_laws/i18n/lo.po
+++ b/ckanext/odm_laws/i18n/lo.po
@@ -1,20 +1,16 @@
 # 
 # Translators:
-# Linh Do <linh@nature.org.vn>, 2016
-# ODM Vietnam <vietnam@opendevmekong.net>, 2015
-# PanNature Vietnam <contact@nature.org.vn>, 2015
-# trang3019 <ng.thutrang.11@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: ODM ckanext-odm_laws\n"
 "POT-Creation-Date: 2016-05-17 14:26+0200\n"
-"PO-Revision-Date: 2016-05-17 12:29+0000\n"
+"PO-Revision-Date: 2016-05-17 12:26+0000\n"
 "Last-Translator: Alex Corbi <a.corbi@gmail.com>\n"
-"Language-Team: Vietnamese (http://www.transifex.com/open-development-mekong/odm-ckanext-odm_laws/language/vi/)\n"
+"Language-Team: Lao (http://www.transifex.com/open-development-mekong/odm-ckanext-odm_laws/language/lo/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: vi\n"
+"Language: lo\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Poedit 1.8.4\n"
 "X-Poedit-Basepath: ../../../ckanext\n"
