--- a/ckanext/odm_laws/i18n/my.po
+++ b/ckanext/odm_laws/i18n/my.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ODM ckanext-odm_laws\n"
-"POT-Creation-Date: 2016-05-17 14:26+0200\n"
-"PO-Revision-Date: 2016-05-17 12:28+0000\n"
+"POT-Creation-Date: 2016-05-17 15:48+0200\n"
+"PO-Revision-Date: 2016-05-17 13:49+0000\n"
 "Last-Translator: Alex Corbi <a.corbi@gmail.com>\n"
 "Language-Team: Burmese (http://www.transifex.com/open-development-mekong/odm-ckanext-odm_laws/language/my/)\n"
 "MIME-Version: 1.0\n"
@@ -17,6 +17,346 @@ msgstr ""
 "X-Poedit-Basepath: ../../../ckanext\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SourceCharset: UTF-8\n"
+
+#: odm_laws/i18n/metadata_fields.php:3
+msgid "Document type"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:4
+msgid "Anukret/Sub-Decree"
+msgstr "တရားရုံးအမိန့်ခွဲ"
+
+#: odm_laws/i18n/metadata_fields.php:5
+msgid "Chbab/Law/Kram"
+msgstr "ဥပဒေ"
+
+#: odm_laws/i18n/metadata_fields.php:6
+msgid "Constitution of Cambodia"
+msgstr "ကမ္ဘောဒီးယားနိုင်ငံ၏ ဖွဲ့စည်းပုံ အခြေခံဥပဒေ"
+
+#: odm_laws/i18n/metadata_fields.php:7
+msgid "International Treaties/Agreements"
+msgstr "နိုင်ငံတကာသဘောတူညီချက်များ"
+
+#: odm_laws/i18n/metadata_fields.php:8
+msgid "Kech Sonya/Contract/Agreement"
+msgstr "သဘောတူညီချက်"
+
+#: odm_laws/i18n/metadata_fields.php:9
+msgid "Kolkar Nenom/Guidelines"
+msgstr "လမ်းကြောင်းပေးခြင်း"
+
+#: odm_laws/i18n/metadata_fields.php:10
+msgid "Kolnyobay/Policy"
+msgstr "မူဝါဒ"
+
+#: odm_laws/i18n/metadata_fields.php:11
+msgid "Likhet/Letter"
+msgstr "စာ"
+
+#: odm_laws/i18n/metadata_fields.php:12
+msgid "Prakas/Joint-Prakas/Proclamation"
+msgstr "ထုတ်ပြန်ချက်"
+
+#: odm_laws/i18n/metadata_fields.php:13
+msgid "Preah Reach Kram/Royal Kram"
+msgstr "Preah Reach Kram/Royal Kram"
+
+#: odm_laws/i18n/metadata_fields.php:14
+msgid "Sarachor/Circular"
+msgstr "Sarachor/Circular"
+
+#: odm_laws/i18n/metadata_fields.php:15
+msgid "Sechkdei Chhun  Damneoung/Notice/Announcement"
+msgstr "သတိပေးချက်/ကြေငြာချက်"
+
+#: odm_laws/i18n/metadata_fields.php:16
+msgid "Sechkdei Nenum/Instruction"
+msgstr "ညွှန်ကြားချက်"
+
+#: odm_laws/i18n/metadata_fields.php:17
+msgid "Sechkdei Preang Chbab/Draft Laws & Regulations"
+msgstr "ဥပဒေကြမ်း နှင့် လုပ်ထုံးလုပ်နည်းများ"
+
+#: odm_laws/i18n/metadata_fields.php:18
+msgid "Sechkdei Samrech/Decision"
+msgstr "ဆုံးဖြတ်ချက်"
+
+#: odm_laws/i18n/metadata_fields.php:19
+msgid "Others"
+msgstr "အခြား"
+
+#: odm_laws/i18n/metadata_fields.php:20
+msgid "Document reference #"
+msgstr "ရည်ညွှန်း စာတမ်းများ"
+
+#: odm_laws/i18n/metadata_fields.php:21
+msgid "Language"
+msgstr "ဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:22
+msgid "Burmese"
+msgstr "ဗမာဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:23
+msgid "English"
+msgstr "အင်္ဂလိပ်ဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:24
+msgid "Khmer"
+msgstr "ခမာဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:25
+msgid "Lao"
+msgstr "လာအိုဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:26
+msgid "Thai"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:27
+msgid "Vietnamese"
+msgstr "ဗီယက်နမ်ဘာသာစကား"
+
+#: odm_laws/i18n/metadata_fields.php:28
+msgid "Chinese"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:29
+msgid "French"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:30
+msgid "German"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:31
+msgid "Japanese"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:32
+msgid "Korean"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:33
+msgid "Other"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:34
+msgid "Formal full title"
+msgstr "ခေါင်းစဉ်အပြည့်အစုံ"
+
+#: odm_laws/i18n/metadata_fields.php:35
+msgid "URL"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:36
+msgid "Alternative/short title"
+msgstr "ခေါင်းစဉ်ကွဲ/ခေါင်းစဉ်တို"
+
+#: odm_laws/i18n/metadata_fields.php:37
+msgid "Topics"
+msgstr "ခေါင်းစဉ်များ"
+
+#: odm_laws/i18n/metadata_fields.php:38
+msgid "Short summary"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:39
+msgid "Primary policy reference point"
+msgstr "မူရင်းမူဝါဒများ ရည်ညွှန်းချက်"
+
+#: odm_laws/i18n/metadata_fields.php:40
+msgid "Geographic area (spatial range)"
+msgstr "ပထဝီဧရိယာ (spatial range)"
+
+#: odm_laws/i18n/metadata_fields.php:41
+msgid "Global"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:42
+msgid "ASEAN"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:43
+msgid "Greater Mekong Subregion (GMS)"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:44
+msgid "Lower Mekong Basin"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:45
+msgid "Lower Mekong countries"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:46
+msgid "Cambodia"
+msgstr "ကမ္ဘောဒီးယား"
+
+#: odm_laws/i18n/metadata_fields.php:47
+msgid "Vietnam"
+msgstr "ဗီယက်နမ်"
+
+#: odm_laws/i18n/metadata_fields.php:48
+msgid "Laos"
+msgstr "လာအို "
+
+#: odm_laws/i18n/metadata_fields.php:49
+msgid "Thailand"
+msgstr "ထိုင်း"
+
+#: odm_laws/i18n/metadata_fields.php:50
+msgid "Myanmar"
+msgstr "မြန်မာ"
+
+#: odm_laws/i18n/metadata_fields.php:51
+msgid "Organization"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:52
+msgid "License"
+msgstr "လိုင်စင်"
+
+#: odm_laws/i18n/metadata_fields.php:53
+msgid "Copyright"
+msgstr "မူပိုင်ခွင့်"
+
+#: odm_laws/i18n/metadata_fields.php:54
+msgid "Access and use constraints"
+msgstr "ရယူခြင်းနှင့် အကန့်အသတ်များအသုံးပြုခြင်း"
+
+#: odm_laws/i18n/metadata_fields.php:55
+msgid "Status"
+msgstr "အခြေအနေ"
+
+#: odm_laws/i18n/metadata_fields.php:56
+msgid "Unspecified"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:57
+msgid "Draft"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:58
+msgid "Adopted"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:59
+msgid "Signed"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:60
+msgid "Version date (of draft)"
+msgstr "အကြမ်းထုတ်ဝေသည့်ရက်စွဲ"
+
+#: odm_laws/i18n/metadata_fields.php:61
+msgid "Adoption date/Promulgation date/Signing"
+msgstr "ခံယူရက်စွဲ"
+
+#: odm_laws/i18n/metadata_fields.php:62
+msgid "Effective date"
+msgstr "အသက်ဝင်သည့်ရက်စွဲ"
+
+#: odm_laws/i18n/metadata_fields.php:63
+msgid "Application date"
+msgstr "အသုံးပြုသည့်ရက်စွဲ"
+
+#: odm_laws/i18n/metadata_fields.php:64
+msgid "Previous legal document"
+msgstr "ဥပဒေရေးရာ စာတမ်းဟောင်း"
+
+#: odm_laws/i18n/metadata_fields.php:65
+msgid "Short notes of change"
+msgstr "ပြောင်းလဲမှု၏ မှတ်စုတိုများ"
+
+#: odm_laws/i18n/metadata_fields.php:66
+msgid "Relationship to other legal docs"
+msgstr "အခြား ဥပဒေရေးရာစာတမ်းများနှင့် ဆက်နွှယ်မှု"
+
+#: odm_laws/i18n/metadata_fields.php:67
+msgid "Child of"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:68
+msgid "Parent of"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:69
+msgid "Associated Document"
+msgstr "ဆက်နွှယ်မှုရှိသည့် စာတမ်းများ"
+
+#: odm_laws/i18n/metadata_fields.php:70
+msgid "Publication reference"
+msgstr "ထုတ်ဝေမှုအတွက်ညွှန်းဆိုချက်"
+
+#: odm_laws/i18n/metadata_fields.php:71
+msgid "Links to source"
+msgstr "အရင်းမြစ်နှင့်ချိတ်ဆက်ခြင်း"
+
+#: odm_laws/i18n/metadata_fields.php:72
+msgid "Contact"
+msgstr "ဆက်သွယ်ရန်"
+
+#: odm_laws/i18n/metadata_fields.php:73
+msgid "Drafting agency"
+msgstr "အကြမ်းဆွဲသည့် အေဂျင်စီများ"
+
+#: odm_laws/i18n/metadata_fields.php:74
+msgid "Technical assistance for drafting"
+msgstr "အကြမ်းဆွဲခြင်းအတွက် နည်းပညာဆိုင်ရာ အထောက်အပံ့"
+
+#: odm_laws/i18n/metadata_fields.php:75
+msgid "Yes"
+msgstr "ရှိပါသည်။"
+
+#: odm_laws/i18n/metadata_fields.php:76
+msgid "No"
+msgstr "မရှိသေးပါ။"
+
+#: odm_laws/i18n/metadata_fields.php:77
+msgid "Unknown"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:78
+msgid "Agency providing technical assistance"
+msgstr "နည်းပညာအထောက်အပံ့ပေးနေသည့် အေဂျင်စီ"
+
+#: odm_laws/i18n/metadata_fields.php:79
+msgid "Technical assistance funding agency"
+msgstr "နည်းပညာအထောက်အပံ့ပေးရန် ငွေကြေးထောက်ပံ့ပေးသော အေဂျင်စီ"
+
+#: odm_laws/i18n/metadata_fields.php:80
+msgid "Issuing agency/parties"
+msgstr "ထုတ်ပေးသောအေဂျင်စီ/အဖွဲ့အစည်းများ"
+
+#: odm_laws/i18n/metadata_fields.php:81
+msgid "Implementing agencies"
+msgstr "အကောင်အထည်ဖော်မည့် အေဂျင်စီများ"
+
+#: odm_laws/i18n/metadata_fields.php:82
+msgid "Notes"
+msgstr "မှတ်စုများ"
+
+#: odm_laws/i18n/metadata_fields.php:83
+msgid "Legacy reference document"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:84
+msgid "Maintainer"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:85
+msgid "Maintainer email"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:86
+msgid "Name"
+msgstr ""
+
+#: odm_laws/i18n/metadata_fields.php:87
+msgid "Format"
+msgstr "ပုံစံ"
 
 #: odm_laws/lib/odm_laws_helper.py:27
 msgid ""
