--- a/ckanext/odm_laws/i18n/km.po
+++ b/ckanext/odm_laws/i18n/km.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ODM ckanext-odm_laws\n"
 "POT-Creation-Date: 2016-05-17 15:48+0200\n"
-"PO-Revision-Date: 2016-05-17 13:49+0000\n"
+"PO-Revision-Date: 2016-05-17 14:20+0000\n"
 "Last-Translator: Alex Corbi <a.corbi@gmail.com>\n"
 "Language-Team: Khmer (http://www.transifex.com/open-development-mekong/odm-ckanext-odm_laws/language/km/)\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: odm_laws/i18n/metadata_fields.php:3
 msgid "Document type"
-msgstr ""
+msgstr "ប្រភេទនៃច្បាប់"
 
 #: odm_laws/i18n/metadata_fields.php:4
 msgid "Anukret/Sub-Decree"
@@ -143,7 +143,7 @@ msgstr ""
 
 #: odm_laws/i18n/metadata_fields.php:33
 msgid "Other"
-msgstr ""
+msgstr "ផ្សេងៗទៀត"
 
 #: odm_laws/i18n/metadata_fields.php:34
 msgid "Formal full title"
